kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: camapi
  namespace: camapi
  labels:
    app: camapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: camapi
  type: NodePort
