kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: predict-ingress
  namespace: camapi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - predict.ivy.cx
    secretName: api-tls
  rules:
    - host: "predict.ivy.cx"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: camapi
              port: 
                number: 80
